--- a/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="BuildStack" asp-route-id="0">Refresh</a>
+    <a href="#" onclick="javascript:location.reload();">Refresh</a>
 </p>
 
 <table class="table table-striped">
