--- a/ShowControlWeb QuestionManagement/Views/QuestionCategories/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/QuestionCategories/Index.cshtml
@@ -28,8 +28,8 @@
                     @Html.DisplayFor(modelItem => item.Category)
                 </td>
                 <td>
+                    <a asp-action="Index" asp-controller="QuestionSubcategories" asp-route-id="@item.CategoryId">Subcategories</a> |
                     <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
                 </td>
             </tr>
