Stack BuildUp Configuration UI and Model change

--- a/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
@@ -74,7 +74,7 @@
 
     <div class="col-2 align-self-center">
         <br />
-        <button type="Submit" class="btn btn-success submit">Search</button>
+        <button type="Submit" class="btn btn-light submit">Search</button>
     </div>
 </div>
 }
