--- a/ShowControlWeb QuestionManagement/Views/Stacks/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/Stacks/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New</a>|
+    <a asp-action="Index" asp-controller="StackConfigurations">Configure</a>
 </p>
 <table class="table table-striped">
     <thead>
