Stack replacement search change, adding 5 used questions even though there are new. Sometimes used are better - quick fix - todo-configurable Return to Details view after saving question

--- a/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
@@ -139,6 +139,7 @@
                             <a asp-action="Replace" asp-controller="StackQuestionReplacement"
                                asp-route-StackId="@ViewBag.StackId"
                                asp-route-ReplaceQuestionId="@item.QuestionId"
+                               asp-route-QuestionId="@QuestionId"
                                asp-route-Level="@ViewBag.Level">
                                 Replace
                             </a>
