MappingType in StackConfigurations Swap [gamequestion] tables for different language

--- a/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Edit.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="StackConfigurationId" />
             <div class="form-group">
+                <label asp-for="MappingTypeForStackBuildUp" class="control-label"></label>
+                <input asp-for="MappingTypeForStackBuildUp" class="form-control" />
+                <span asp-validation-for="MappingTypeForStackBuildUp" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="UseNewQuestionsForStackBuildUp" class="control-label"></label>
                 <input asp-for="UseNewQuestionsForStackBuildUp" class="form-control" />
                 <span asp-validation-for="UseNewQuestionsForStackBuildUp" class="text-danger"></span>
