--- a/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Create.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Create.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="StackConfigurationId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="MappingTypeForStackBuildUp" class="control-label"></label>
+                <input asp-for="MappingTypeForStackBuildUp" class="form-control" />
+                <span asp-validation-for="MappingTypeForStackBuildUp" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="UseNewQuestionsForStackBuildUp" class="control-label"></label>
                 <input asp-for="UseNewQuestionsForStackBuildUp" class="form-control" />
                 <span asp-validation-for="UseNewQuestionsForStackBuildUp" class="text-danger"></span>
