--- a/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Delete.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Delete.cshtml
@@ -11,34 +11,37 @@
     <h4>Stackconfigurations</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MappingTypeForStackBuildUp)
+        </dt>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UseNewQuestionsForStackBuildUp)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UseNewQuestionsForStackBuildUp)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UseOldQuestionsForStackBuildUp)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UseOldQuestionsForStackBuildUp)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UseOldQuestionsForReplacementSearch)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UseOldQuestionsForReplacementSearch)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.QualificationQuestionsPerStack)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.QualificationQuestionsPerStack)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StandardQuestionsPerStack)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StandardQuestionsPerStack)
         </dd>
     </dl>
