--- a/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/Stackconfigurations/Index.cshtml
@@ -9,9 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table-responsive">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.MappingTypeForStackBuildUp)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.UseNewQuestionsForStackBuildUp)
             </th>
@@ -34,6 +37,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.MappingTypeForStackBuildUp)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.UseNewQuestionsForStackBuildUp)
             </td>
             <td>
@@ -50,10 +56,13 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.StackConfigurationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.StackConfigurationId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.StackConfigurationId">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<p>
+    <a asp-action="SwapGamequestionTables">Swap Gamequestion Tables for different language</a>
+</p>
