--- a/ShowControlWeb QuestionManagement/Views/QuestionsPreviewFromStack/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/QuestionsPreviewFromStack/Index.cshtml
@@ -1,164 +1,166 @@
 ﻿@model ShowControlWeb_QuestionManagement.Models.WwtbamData.ViewModels.StackQuestionPreviewViewModel
-@await Html.PartialAsync("_QuestionModalPreview")
 
-@{
-    string indexTitle = "";
-    if (Model.stack != null && (!string.IsNullOrWhiteSpace(Model.stack.Stack)))
-    {
-        indexTitle = ((QuestionTypeDescription)Model.stack.Type) + " " + Model.stack.Stack;
-    }
-}
+    @await Html.PartialAsync("_QuestionModalPreview")
 
-<h1>
     @{
-        <text>@indexTitle</text>
-        if (Model.IsStackLive)
+        string indexTitle = "";
+        if (Model.stack != null && (!string.IsNullOrWhiteSpace(Model.stack.Stack)))
         {
-            <span class="badge badge-pill badge-danger">Live</span>
+            indexTitle = ((QuestionTypeDescription)Model.stack.Type) + " " + Model.stack.Stack;
         }
     }
-</h1>
-<h5>
-    @if (Model.IsStackReplacement)
-    {
-        <span class="badge badge-pill badge-info">Replacement</span>
-    }
-</h5>
 
-<p>
-    <a asp-action="BuildStack" asp-route-id="@Model.stack.StackId">Build Stack</a> |
-    @{
-        if (Model.IsStackLive == false)
-        {
-            <a asp-action="SetStackLive" asp-route-id="@Model.stack.StackId">Set Live</a> <text>|</text>
-        }
-        else
-        {
-            <a asp-action="RemoveStackLive" asp-route-id="@Model.stack.StackId">Remove from Live</a> <text>|</text>
-        }
-
-        if (Model.IsStackReplacement == false)
-        {
-            <a asp-action="SetReplacementStack" asp-route-id="@Model.stack.StackId">Set as Replacement</a> <text>|</text>
-        }
-        else
-        {
-            <a asp-action="RemoveReplacementStack" asp-route-id="@Model.stack.StackId">Remove Replacement</a> <text>|</text>
-        }
-    }
-    <a asp-action="RemoveAll" asp-route-id="@Model.stack.StackId">Remove All Questions</a>
-</p>
-
-@{
-    string successAlertDisplay = "none";
-    string errorAlertDisplay = "none";
-}
-@if (TempData["SuccessMessage"] != null)
-{
-    successAlertDisplay = "";
-    string successAlertText = TempData["SuccessMessage"].ToString();
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="display: @successAlertDisplay">
-        <text>@successAlertText</text>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    TempData["SuccessMessage"] = null;
-}
-else if (TempData["ErrorMessage"] != null)
-{
-    errorAlertDisplay = "";
-    string errorAlertText = TempData["ErrorMessage"].ToString();
-    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display: @errorAlertDisplay">
-        <text>@errorAlertText</text>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    TempData["ErrorMessage"] = null;
-}
-<div class="table-responsive">
-    <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th>
-                    <text>Level</text>
-                </th>
-                <th>
-                    <text>ID</text>
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.questionsPreviewFromStack.FirstOrDefault().Question)
-                </th>
-                <th>
-                    <text>Used</text>
-                </th>
-                <th>
-
-                </th>
-                <th>
-
-                </th>
-                <th>
-
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.questionsPreviewFromStack)
+    <h1>
+        @{
+            <text>@indexTitle</text>
+            if (Model.IsStackLive)
             {
-                string rowColor = "";
-                @if (item.TimesAnswered != 0)
-                {
-                    rowColor = "#ffe375";
-                }
-                else if (item.QuestionId <= 0)
-                {
-                    rowColor = "#ff8a8a";
-                }
-                <tr style="background-color:@rowColor">
-                    <td>
-                        <a asp-action="FindReplacement" asp-controller="QuestionsPreviewFromStack"
-                           asp-route-StackId="@Model.stack.StackId" asp-route-QuestionId="@item.QuestionId"
-                           asp-route-Level="@item.QuestionLevel">
-                            @item.QuestionLevel
-                        </a>
-                    </td>
-                    <td>
-                        @*asp-action="Details" asp-controller="GameQuestions" asp-route-id="@item.QuestionId"*@
-                        <a href="#" onclick="PreviewQuestion(@item.QuestionId, @item.QuestionLevel)">
-                            @item.QuestionId
-                        </a>
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Question)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TimesAnswered)
-                    </td>
-                    <td>
-                        @*<a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |*@
-                        <a asp-action="RemoveQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
-                           asp-route-QuestionId="@item.QuestionId">✕</a>
-                    </td>
-                    <td>
-                        <strong>
-                            <a asp-action="MoveUpQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
-                               asp-route-QuestionId="@item.QuestionId">&nbsp;&nbsp;↑&nbsp;</a>
-                        </strong>
-                    </td>
-                    <td>
-                        <strong>
-                            <a asp-action="MoveDownQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
-                               asp-route-QuestionId="@item.QuestionId">&nbsp;↓&nbsp;</a>
-                        </strong>
-                    </td>
-                </tr>
+                <span class="badge badge-pill badge-danger">Live</span>
             }
-        </tbody>
-    </table>
-</div>
-<div>
-    <a asp-action="Index" asp-controller="Stacks">Back to List</a>
-</div>
+        }
+    </h1>
+    <h5>
+        @if (Model.IsStackReplacement)
+        {
+            <span class="badge badge-pill badge-info">Replacement</span>
+        }
+    </h5>
+
+    <p>
+        <a asp-action="BuildStack" asp-route-id="@Model.stack.StackId">Build Stack</a> |
+        @{
+            if (Model.IsStackLive == false)
+            {
+                <a asp-action="SetStackLive" asp-route-id="@Model.stack.StackId">Set Live</a> <text>|</text>
+            }
+            else
+            {
+                <a asp-action="RemoveStackLive" asp-route-id="@Model.stack.StackId">Remove from Live</a> <text>|</text>
+            }
+
+            if (Model.IsStackReplacement == false)
+            {
+                <a asp-action="SetReplacementStack" asp-route-id="@Model.stack.StackId">Set as Replacement</a> <text>|</text>
+            }
+            else
+            {
+                <a asp-action="RemoveReplacementStack" asp-route-id="@Model.stack.StackId">Remove Replacement</a> <text>|</text>
+            }
+        }
+        <a asp-action="RemoveAll" asp-route-id="@Model.stack.StackId">Remove All Questions</a>
+    </p>
+
+    @{
+        string successAlertDisplay = "none";
+        string errorAlertDisplay = "none";
+    }
+    @if (TempData["SuccessMessage"] != null)
+    {
+        successAlertDisplay = "";
+        string successAlertText = TempData["SuccessMessage"].ToString();
+        <div class="alert alert-success alert-dismissible fade show" role="alert" style="display: @successAlertDisplay">
+            <text>@successAlertText</text>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        TempData["SuccessMessage"] = null;
+    }
+    else if (TempData["ErrorMessage"] != null)
+    {
+        errorAlertDisplay = "";
+        string errorAlertText = TempData["ErrorMessage"].ToString();
+        <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display: @errorAlertDisplay">
+            <text>@errorAlertText</text>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        TempData["ErrorMessage"] = null;
+    }
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        <text>Level</text>
+                    </th>
+                    <th>
+                        <text>ID</text>
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.questionsPreviewFromStack.FirstOrDefault().Question)
+                    </th>
+                    <th>
+                        <text>Used</text>
+                    </th>
+                    <th>
+
+                    </th>
+                    <th>
+
+                    </th>
+                    <th>
+
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.questionsPreviewFromStack)
+                {
+                    string rowColor = "";
+                    @if (item.TimesAnswered != 0)
+                    {
+                        rowColor = "#ffe375";
+                    }
+                    else if (item.QuestionId <= 0)
+                    {
+                        rowColor = "#ff8a8a";
+                    }
+                    string GridLevelQuestionId = $"GridLevelQuestionId" + item.QuestionId;
+                    <tr style="background-color:@rowColor">
+                        <td>
+                            <a asp-action="FindReplacement" asp-controller="QuestionsPreviewFromStack"
+                               asp-route-StackId="@Model.stack.StackId" asp-route-QuestionId="@item.QuestionId"
+                               asp-route-Level="@item.QuestionLevel">
+                                @item.QuestionLevel
+                            </a>
+                        </td>
+                        <td>
+                            @*asp-action="Details" asp-controller="GameQuestions" asp-route-id="@item.QuestionId"*@
+                            <a href="#" id="@GridLevelQuestionId" onclick="PreviewQuestion(@item.QuestionId, @item.QuestionLevel)">
+                                @item.QuestionId
+                            </a>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Question)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TimesAnswered)
+                        </td>
+                        <td>
+                            @*<a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
+                                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |*@
+                            <a asp-action="RemoveQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
+                               asp-route-QuestionId="@item.QuestionId">✕</a>
+                        </td>
+                        <td>
+                            <strong>
+                                <a asp-action="MoveUpQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
+                                   asp-route-QuestionId="@item.QuestionId">&nbsp;&nbsp;↑&nbsp;</a>
+                            </strong>
+                        </td>
+                        <td>
+                            <strong>
+                                <a asp-action="MoveDownQuestionFromStack" asp-controller="QuestionsPreviewFromStack" asp-route-StackId="@Model.stack.StackId"
+                                   asp-route-QuestionId="@item.QuestionId">&nbsp;↓&nbsp;</a>
+                            </strong>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <a asp-action="Index" asp-controller="Stacks">Back to List</a>
+    </div>
