--- a/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
@@ -95,6 +95,9 @@
                     @Html.DisplayNameFor(model => model.replacementQuestions.FirstOrDefault().TimesAnswered)
                 </th>
                 <th>
+                    @Html.DisplayNameFor(model => model.replacementQuestions.FirstOrDefault().LastTimeAnswered)
+                </th>
+                <th>
 
                 </th>
             </tr>
@@ -131,6 +134,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.TimesAnswered)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LastTimeAnswered)
                     </td>
                     <td>
                         <a asp-action="Replace" asp-controller="StackQuestionReplacement"
