Question pagination; fix to wait after question update; World Quizzing Championships categories

--- a/ShowControlWeb QuestionManagement/Views/_ViewImports.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ShowControlWeb_QuestionManagement
 @using ShowControlWeb_QuestionManagement.Models
+@using NonFactors.Mvc.Grid;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
