StackQuestionReplacement LastTimeAnswered filtering using DateTo; fix mapping for ReplacementQuestions

--- a/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/StackQuestionReplacement/Index.cshtml
@@ -25,53 +25,63 @@
     </div>*@
 @using (Html.BeginForm("Index", "StackQuestionReplacement", FormMethod.Get))
 {
-    <div class="row">
-        <div class="col-3">
+<div class="row">
+    <div class="col-3">
 
-            @Html.HiddenFor(m => m.StackId)
-            @Html.HiddenFor(m => m.QuestionId)
-            @Html.HiddenFor(m => m.Level)
+        @Html.HiddenFor(m => m.StackId)
+        @Html.HiddenFor(m => m.QuestionId)
+        @Html.HiddenFor(m => m.Level)
 
-            @Html.LabelFor(model => model.questionCategories.FirstOrDefault().Category)
-            @Html.DropDownListFor(m => m.SelectedCategoryId,
-           new SelectList
-           (Model.questionCategories,
-           @Html.DisplayNameFor(model => model.questionCategories.FirstOrDefault().CategoryId),
-           @Html.DisplayNameFor(model => model.questionCategories.FirstOrDefault().Category)),
-           new { @class = "browser-default custom-select" })
+        @Html.LabelFor(model => model.questionCategories.FirstOrDefault().Category)
+        @Html.DropDownListFor(m => m.SelectedCategoryId,
+       new SelectList
+       (Model.questionCategories,
+       @Html.DisplayNameFor(model => model.questionCategories.FirstOrDefault().CategoryId),
+       @Html.DisplayNameFor(model => model.questionCategories.FirstOrDefault().Category)),
+       new { @class = "browser-default custom-select" })
 
-            <span> </span>
+        <span> </span>
 
-        </div>
-
-        <div class="col-3">
-
-            @Html.LabelFor(model => model.questionSubcategories.FirstOrDefault().Subcategory)
-            @Html.DropDownListFor(m => m.SelectedSubcategoryId,
-           new SelectList
-           (Model.questionSubcategories,
-           @Html.DisplayNameFor(model => model.questionSubcategories.FirstOrDefault().SubcategoryId),
-           @Html.DisplayNameFor(model => model.questionSubcategories.FirstOrDefault().Subcategory)),
-           new { @class = "browser-default custom-select" })
-
-            <span> </span>
-        </div>
-
-        <div class="col-1">
-            @Html.Label("Up")
-            @Html.TextBoxFor(model => model.UpValue, "", new { @class = "form-control", @type = "number" })
-        </div>
-
-        <div class="col-1">
-            @Html.Label("Down")
-            @Html.TextBoxFor(model => model.DownValue, "", new { @class = "form-control", @type = "number" })
-        </div>
-
-        <div class="col-2 align-self-center">
-            <br />
-            <button type="Submit" class="btn btn-light submit">Search</button>
-        </div>
     </div>
+
+    <div class="col-3">
+
+        @Html.LabelFor(model => model.questionSubcategories.FirstOrDefault().Subcategory)
+        @Html.DropDownListFor(m => m.SelectedSubcategoryId,
+       new SelectList
+       (Model.questionSubcategories,
+       @Html.DisplayNameFor(model => model.questionSubcategories.FirstOrDefault().SubcategoryId),
+       @Html.DisplayNameFor(model => model.questionSubcategories.FirstOrDefault().Subcategory)),
+       new { @class = "browser-default custom-select" })
+
+        <span> </span>
+    </div>
+
+    <div class="col-1">
+        @Html.Label("Up")
+        @Html.TextBoxFor(model => model.UpValue, "", new { @class = "form-control", @type = "number" })
+    </div>
+
+    <div class="col-1">
+        @Html.Label("Down")
+        @Html.TextBoxFor(model => model.DownValue, "", new { @class = "form-control", @type = "number" })
+    </div>
+
+    @{
+        if (Model.UseOldQuestions)
+        {
+            <div class="col-2">
+                @Html.Label("LastTimeAnswered-To")
+                @Html.TextBoxFor(model => model.LastTimeAnsweredDateTo, "", new { @class = "form-control", @type = "date" })
+            </div>
+        }
+    }
+
+    <div class="col-2 align-self-center">
+        <br />
+        <button type="Submit" class="btn btn-light submit">Search</button>
+    </div>
+</div>
 }
 <br />
 
@@ -94,9 +104,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.replacementQuestions.FirstOrDefault().TimesAnswered)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.replacementQuestions.FirstOrDefault().LastTimeAnswered)
-                </th>
+                @if (Model.UseOldQuestions)
+                {
+                    <th>
+                        @Html.DisplayNameFor(model => model.replacementQuestions.FirstOrDefault().LastTimeAnswered)
+                    </th>
+                }
                 <th>
 
                 </th>
@@ -115,39 +128,42 @@
                     rowColor = "#ff8a8a";
                 }
                 string gridLevelQuestionId = $"GridLevelQuestionId" + item.QuestionId;
-                <tr style="background-color:@rowColor">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Difficulty)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MappedLevel)
-                    </td>
-                    <td>
-                        @*GameQuestions/Details/3*@
-                        <a href="#" id="@gridLevelQuestionId" onclick="PreviewQuestion(@item.QuestionId, @item.MappedLevel)">
-                            @item.QuestionId
-                        </a>
-                        @*@Html.DisplayFor(modelItem => item.QuestionId)*@
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Question)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TimesAnswered)
-                    </td>
+            <tr style="background-color:@rowColor">
+                <td>
+                    @Html.DisplayFor(modelItem => item.Difficulty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MappedLevel)
+                </td>
+                <td>
+                    @*GameQuestions/Details/3*@
+                    <a href="#" id="@gridLevelQuestionId" onclick="PreviewQuestion(@item.QuestionId, @item.MappedLevel)">
+                        @item.QuestionId
+                    </a>
+                    @*@Html.DisplayFor(modelItem => item.QuestionId)*@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Question)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TimesAnswered)
+                </td>
+                @if (Model.UseOldQuestions)
+                {
                     <td>
                         @Html.DisplayFor(modelItem => item.LastTimeAnswered)
                     </td>
-                    <td>
-                        <a asp-action="Replace" asp-controller="StackQuestionReplacement"
-                           asp-route-StackId="@ViewBag.StackId"
-                           asp-route-ReplaceQuestionId="@item.QuestionId"
-                           asp-route-QuestionId="@QuestionId"
-                           asp-route-Level="@ViewBag.Level">
-                            Replace
-                        </a>
-                    </td>
-                </tr>
+                }
+                <td>
+                    <a asp-action="Replace" asp-controller="StackQuestionReplacement"
+                       asp-route-StackId="@ViewBag.StackId"
+                       asp-route-ReplaceQuestionId="@item.QuestionId"
+                       asp-route-QuestionId="@QuestionId"
+                       asp-route-Level="@ViewBag.Level">
+                        Replace
+                    </a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
